--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@ $if logged_in:
 	</form>
 	</li>
 	<li><a href="logoff">Logoff</a></li>
-	<li><a href="unregister">Unregister</a></li>. Warning: This step is not undoable.
+	<li><a href="unregister">Unregister</a>. Warning: This step is not undoable.</li>
 	</ul>
 $else:
 	<a href="login_form">Login</a>, <a href="register_form">Register</a>
