--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,54 @@
-$def with (logged_in, user, email, available, received)
+$def with (content, nickname = None)
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet" type="text/css" media="screen" href="http://datalove.me/datalove.css" />
+<link rel="shortcut icon" type="image/x-icon" href="http://datalove.me/datalove-favicon.png" />
+<title>~~~~=:) - give.datalove.me - (:=~~~~</title>
+</head>
+<body>
+<div class="menu">
+<a href="http://datalove.me/index.html">Principles</a> | <a href="http://datalove.me/images.html">Images</a> | <a href="http://datalove.me/about.html">About</a> | <a href="http://give.datalove.me">give.datalove</a>
 
-$if logged_in:
-	Hi $user
-	<ul>
-	<li><b>Available love:</b> $available; <b>Received love:</b> $received</li>
-	<li><b>Change email adress</b>
-	<form method="post" action="change_mail_address_action">
-	<div id="email_field"><input type="text" name="email" value="$email" />
-	<input type="submit" value="Change" /></div>
-	</form>
-	</li>
-	<li> <b>Change Password</b>
-	<form 	name="me.datalove.give.reset_password_form" 
-			class="me.datalove.give.reset_password_form" 
-			method="post" 
-			action="change_password_action">
-		<div id="password_field">Old Password: <input type="password" name="old_password" /></div>
-		<div id="password_field">New Password: <input type="password" name="new_password" /></div>
-		<div id="password_field">Confirm New Password: <input type="password" name="new_password_conf" /></div>
-		<div id="submit_button"><input type="submit" value="Change" /></div>
-	</form>
-	</li>
-	<li><a href="logoff">Logoff</a></li>
-	<li><a href="unregister">Unregister</a>. Warning: This step is not undoable.</li>
-	</ul>
+</div>
+<div>
+    <div id="sidebar">
+        <ul>
+$if nickname:
+    <li><a href="logoff">Logoff</a></li>
+    <li><a href="manage_account">Manage account</a></li>
 $else:
-	<a href="login_form">Login</a>, <a href="register_form">Register</a>
+    <li><a href="login_form">Login</a></li>
+<li><a href="http://datalove.me/give/widget.html">Widget for website</a></li>
+<li><a href="http://datalove.me/give/about.html">About give.datalove.me</a>
+<li><a href="http://datalove.me/give/faq.html">FAQ</a></li>
+<li><a href="http://datalove.me/give/api.html" target="_blank">API Documentation</a></li>
+        </ul>
+    </div>
+    <div id="content">
+        $:content
+        <!-- Here goes content
+        class="about" == white text (like about text)
+        class="love" == bold red
+        class="datalove" == bold white (like principles text)
+        -->
+    </div>
+    <div class="footer">
+    No Copyright, no license. Sorry, no kittehs.<br />
+    Version 1.0 - beating heart <br />
+    Part of the Telecomix Network.<br />
+    <div class="footerrow">
+    <a href="http://www.telecomix.org"><img src="http://datalove.me/telecomix.gif" border="0"  align="bottom" align="left" /></a>
+    <a href="http://www.kopimi.com"><img src="http://www.kopimi.com/kopimi/k/mkopimi_gay.gif" border="0"  align="bottom" align="left" /></a>
+<div class="mails"><span>info [at] datalove [dot] me<br />
+info [at] werebuild [dot] eu<br />
+info [at] telecomix [dot] org</span></div>
+</div>
+    </div>
+
+</div>
+</body>
+</html>
+
+
