--- a/templates/manage_account.html
+++ b/templates/manage_account.html
@@ -1,41 +1,49 @@
-$def with (nickname, email)
-		<style type="text/css">
-			form p.about input {
-				border: #ffffff 1pt solid;
-				background-color: #000000;
-				font-family: monospace;
-				color: #ffffff;
-				margin: 2px;
-			}
-			
-			form p.about input.button {
-				border-left: #ffffff 2pt solid;
-				border-top: #ffffff 2pt solid;
-				border-right: #aaaaaa 2pt solid;
-				border-bottom: #aaaaaa 2pt solid;
-				background-color: #000000;
-				font-family: "Lucida Sans","DejaVu Sans","Bitstream Vera Sans","Liberation Sans",Verdana,"Verdana Ref",sans-serif;
-				font-weight: bold;
-				color: #ffffff;
-				margin: 2px;
-			}
-		</style>
-		<p class="love">Manage Account [<a href='/'>$nickname</a>]</p>
-		<p class="abouth">Change email address:</p>
-		<form method="post" action="change_mail_address_action">
-			<p class="about" style="padding-left: 2em; text-align: right; width: 400px;">
-				Email address: <input type="text" name="email" value="$email" /> <br />
-				<input class="button" type="submit" value="Change" />
-			</p>
-		</form>
-		<p class="abouth">Change Password:</p>
-		<form method="post" action="change_mail_address_action">
-			<p class="about" style="padding-left: 2em; text-align: right; width: 400px;">
-				Old Password: <input type="password" name="old_password" /> <br />
-				New Password: <input type="password" name="new_password" /> <br />
-				Confirm New Password: <input type="password" name="new_password_conf" /> <br />
-				<input class="button" type="submit" value="Change"/>
-			</p>
-		</form>
-		<p class="abouth">Delete account:</p>
-		<p class="about"><a href="/unregister">Do it!</a></p>
+$def with (nickname, email, email_change_error = None, pw_change_error = None)
+        <style type="text/css">
+            input {
+                border: #ffffff 1pt solid;
+                background-color: #000000;
+                font-family: monospace;
+                color: #ffffff;
+                margin: 2px;
+            }
+            
+            input.button {
+                border-left: #ffffff 2pt solid;
+                border-top: #ffffff 2pt solid;
+                border-right: #aaaaaa 2pt solid;
+                border-bottom: #aaaaaa 2pt solid;
+                background-color: #000000;
+                font-family: "Lucida Sans","DejaVu Sans","Bitstream Vera Sans","Liberation Sans",Verdana,"Verdana Ref",sans-serif;
+                font-weight: bold;
+                color: #ffffff;
+                margin: 2px;
+            }
+        </style>
+        <p class="love">Manage Account [<a href='/'>$nickname</a>]</p>
+        <p class="abouth">Change email address:</p>
+        <form method="post" action="#">
+            <div class="about" style="padding-left: 2em; text-align: right; width: 400px;">
+                Email address: <input type="text" name="email" value="$email" /> <br />
+                $if email_change_error:
+                    <div style="font-size: 75%;color: #ff0000;margin-bottom: 2px;">
+                        $email_change_error
+                    </div>
+                <input class="button" type="submit" value="Change email address" />
+            </div>
+        </form>
+        <p class="abouth">Change Password:</p>
+        <form method="post" action="#">
+            <div class="about" style="padding-left: 2em; text-align: right; width: 400px;">
+                Old Password: <input type="password" name="old_password" /> <br />
+                New Password: <input type="password" name="new_password" /> <br />
+                Confirm New Password: <input type="password" name="new_password_conf" /> <br />
+                $if pw_change_error:
+                    <div style="font-size: 75%;color: #ff0000;margin-bottom: 2px;">
+                        $pw_change_error
+                    </div>
+                <input class="button" type="submit" value="Change password"/>
+            </div>
+        </form>
+        <p class="abouth">Delete account:</p>
+        <p class="about"><a href="/unregister">Do it!</a></p>
