app.py: Error handling as function using templates.

--- a/templates/manage_account.html
+++ b/templates/manage_account.html
@@ -1,4 +1,5 @@
 $def with (nickname, email, email_change_error = None, pw_change_error = None)
+$# Is loaded as content on /manage_account (with index.html template).
         <style type="text/css">
             input {
                 border: #ffffff 1pt solid;
