--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,3 +1,4 @@
+$# Is loaded as content on / (with index.html template) if no user is logged in.
 		<p class="love">Welcome to give.datalove.me!</p>
 		<p class="abouth">What is give.datalove about?</p>
 		<p class="about">We know many internet systems, where you can give points to other users. In this closed systems, normally the points run out and you have to do something to be able to get new points and do something with them.</p>
