--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 $def with (content, logged_in = False, login_error = None)
+$# The standard frame for all pages.
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
