--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -5,3 +5,5 @@ $# Is loaded as content on / (with index.html template) if user is logged in.
             U haz $received_datalove datalovez received and $available_datalove
             waiting to be spread.
         </p>
+        <!--Place holder-->
+        <div style="height: 400px">&nbsp;</div>
