app.py: reset password form graphified.

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@ $# The standard frame for all pages.
                             $login_error
                         </div><br />
                     <a href="register" style="font-size: 75%;">Register</a> |
-                    <a href="reset_password_form" style="font-size: 75%;">Forgot password?</a> 
+                    <a href="reset_password" style="font-size: 75%;">Forgot password?</a> 
                     <input class="button" type="submit" value="Login" /><br />
                 </div>
             </form>
