--- a/templates/reset_password_form.html
+++ b/templates/reset_password_form.html
@@ -1,8 +1,46 @@
-Please enter your nickname to reset the password.
-<form 	name="me.datalove.give.reset_password_form" 
-		class="me.datalove.give.reset_password_form" 
-		method="post" 
-		action="reset_password_action">
-	<div id="nickname_field">Nickname: <input type="text" name="nickname" /></div>
-	<div id="submit_button"><input type="submit" value="Reset Password" /></div>
-</form>
+$def with (nickname = None, error = None, success = False)
+$# Is loaded as content on /reset_password (with index.html template).
+        <style type="text/css">
+            input {
+                border: #ffffff 1pt solid;
+                background-color: #000000;
+                font-family: monospace;
+                color: #ffffff;
+                margin: 2px;
+            }
+            
+            input.button {
+                border-left: #ffffff 2pt solid;
+                border-top: #ffffff 2pt solid;
+                border-right: #aaaaaa 2pt solid;
+                border-bottom: #aaaaaa 2pt solid;
+                background-color: #000000;
+                font-family: "Lucida Sans","DejaVu Sans","Bitstream Vera Sans","Liberation Sans",Verdana,"Verdana Ref",sans-serif;
+                font-weight: bold;
+                color: #ffffff;
+                margin: 2px;
+            }
+        </style>
+        <p class="love">Reset password</p>
+        $if success:
+            <p class="about">
+                Password reset successfully. you should get an e-mail shortly
+                to the address you are registered to. 
+                <a href="/">
+                    Back to main page.
+                </a>
+            </p>
+        $else:
+            <p class="about">Please enter your nickname to reset the password.</p>
+            <form method="post" action="#">
+                <div class="about" style="padding-left: 2em; text-align: right; width: 400px;">
+                    Nickname: <input type="text" name="nickname" value="$nickname" /> <br />
+                    $if error:
+                        <div style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">
+                            $error
+                        </div>
+                    <input class="button" type="submit" value="Reset password" /> <br />
+                </div>
+            </form>
+        <!--Place holder-->
+        <div style="height: 400px">&nbsp;</div>
