--- a/templates/widget.html
+++ b/templates/widget.html
@@ -1,6 +1,47 @@
-$def with (user,received_love)
-
-<div class="me.datalove.give.login_form">
-	$user haz $received_love datalovez. 
-	<a class="me.datalove.give.counter" href="give_${user}_datalove">Give $user datalove!</a>
-</div>
+$def with (user, received_love)
+$# The standard frame for all pages.
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<style type="text/css">
+    body {
+        margin: 0px;
+        padding: 0px;
+        background-color: black
+    }
+    
+    .widget {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 70px;
+        height: 71px;
+        background-image: url(http://datalove.me/give/widget_off.png);
+    }
+    
+    .widget:hover {
+        background-image: url(http://datalove.me/give/widget_over.png);
+    }
+    
+    .received_love {
+        color: #ff0000;
+        font-family: monospace;
+        font-size: 8px;
+        position: fixed;
+        top: 56px;
+        left: 5px
+    }
+</style>
+<title>~~~~=:) - give.datalove.me - (:=~~~~</title>
+</head>
+<body>
+<a href="give_${user}_datalove">
+    <div class="widget">
+        <div class="received_love">
+            ${"%012d" % received_love}
+        </div>
+    </div>
+</a>
+</body>
+</html>
