--- a/templates/internal_server_error.html
+++ b/templates/internal_server_error.html
@@ -3,7 +3,8 @@ $# Is loaded if 500 Internal Server Error is send by the application.
 <h1>500 Internal Server Error</h1>
 $if msg: 
     <b>Cause: $msg</b>
-$if error_stack: 
-    <pre>
-$error_stack
-    </pre>
+Help to fix this error and post a bug report to the project's
+<a href="https://github.com/authmillenon/give-datalove/issues">bugtracker</a>
+or fix it your self by working on our 
+<a href="https://github.com/authmillenon/give-datalove/"><tt>git</tt> repository</a>
+${if error_stack: "<pre>%s</pre>" % $error_stack}
