--- a/templates/internal_server_error.html
+++ b/templates/internal_server_error.html
@@ -7,4 +7,4 @@ Help to fix this error and post a bug report to the project's
 <a href="https://github.com/authmillenon/give-datalove/issues">bugtracker</a>
 or fix it your self by working on our 
 <a href="https://github.com/authmillenon/give-datalove/"><tt>git</tt> repository</a>
-${if error_stack: "<pre>%s</pre>" % $error_stack}
+${if error_stack: "<pre>%s</pre>" % error_stack}
