--- a/templates/widget.html
+++ b/templates/widget.html
@@ -1,4 +1,4 @@
-$def with (user, received_love)
+$def with (user, received_love, error = None)
 $# The standard frame for all pages.
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -12,6 +12,10 @@ $# The standard frame for all pages.
     }
     
     .widget {
+        color: #ff0000;
+        text-align: center;
+        padding-top: 3px;
+        font-size: 10px;
         position: fixed;
         top: 0px;
         left: 0px;
@@ -38,6 +42,8 @@ $# The standard frame for all pages.
 <body>
 <a href="give_${user}_datalove">
     <div class="widget">
+        $if error: 
+            <span style="background-color: #ffffff">$error</span>
         <div class="received_love">
             ${"%012d" % received_love}
         </div>
