Put the link to the userlist into the index-template

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@ $# The standard frame for all pages.
                 <li><a href="manage_account">Manage account</a></li>
             <li><a href="http://datalove.me/give/widget.html">Widget for website</a></li>
             <li><a href="http://datalove.me/give/about.html">About give.datalove.me</a>
+            <li><a href="http://give.datalove.me:8080/users">Loverz</a></li>
             <li><a href="http://datalove.me/give/faq.html">FAQ</a></li>
             <li><a href="http://datalove.me/give/api.html" target="_blank">API Documentation</a></li>
         </ul>
