--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -1,4 +1,4 @@
-$def with (nickname = None, email = None, registration_error = None)
+$def with (nickname = None, email = None, session_id = None, registration_error = None)
 $# Is loaded as content on /register (with index.html template).
         <style type="text/css">
             input {
@@ -24,6 +24,8 @@ $# Is loaded as content on /register (with index.html template).
         <p class="love">Register to give.datalove.me</p>
         <form method="post" action="#">
             <div class="about" style="padding-left: 2em; text-align: right; width: 400px;">
+                $if session_id:
+                    <input type="hidden" name="sid" value="$session_id">
                 Nickname*: <input type="text" name="nickname" value="$nickname" /> <br />
                 Password*: <input type="password" name="password" /> <br />
                 Confirm Password*: <input type="password" name="conf_password" /> <br />
