--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@ $# The standard frame for all pages.
             $if logged_in:
                 <li><a href="logoff">Logoff</a></li>
                 <li><a href="manage_account">Manage account</a></li>
+                <li><a href="history">History</a></li>
             <li><a href="http://datalove.me/give/widget.html">Widget for website</a></li>
             <li><a href="http://datalove.me/give/about.html">About give.datalove.me</a>
             <li><a href="http://datalove.me/give/faq.html">FAQ</a></li>
