URL Sessions for reset_password

--- a/templates/reset_password_form.html
+++ b/templates/reset_password_form.html
@@ -1,4 +1,4 @@
-$def with (nickname = None, error = None, success = False)
+$def with (nickname = None, session_id = None, error = None, success = False)
 $# Is loaded as content on /reset_password (with index.html template).
         <style type="text/css">
             input {
@@ -26,13 +26,16 @@ $# Is loaded as content on /reset_password (with index.html template).
             <p class="about">
                 Password reset successfully. you should get an e-mail shortly
                 to the address you are registered to. 
-                <a href="/">
-                    Back to main page.
-                </a>
+                $if session_id:
+                    <a href="/sid=$session_id">Back to main page.</a>
+                $else:
+                    <a href="/">Back to main page.</a>
             </p>
         $else:
             <p class="about">Please enter your nickname to reset the password.</p>
             <form method="post" action="#">
+                $if session_id:
+                    <input type="hidden" name="sid" value="$session_id">
                 <div class="about" style="padding-left: 2em; text-align: right; width: 400px;">
                     Nickname: <input type="text" name="nickname" value="$nickname" /> <br />
                     $if error:
