--- a/templates/profilepage.html
+++ b/templates/profilepage.html
@@ -2,7 +2,7 @@ $def with (nickname, user, error, logged_in = False, login_block = True, session
         <p class="love">Username: $nickname</p>
         <p class="about">Recieved love: $user.received_love</p>
         $if user.website:
-            <p class="about">Website: $user.website</p>
+            <p class="about">Website: <a href="$user.website" target="_blank">$user.website</a></p>
         $if error: 
             <p style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">$error</p>
         $if logged_in and session_id:
