--- a/templates/manage_account.html
+++ b/templates/manage_account.html
@@ -65,7 +65,7 @@ $# Is loaded as content on /manage_account (with index.html template).
                     <div style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">
                         $website_change_error
                     </div>
-                <input class="button" type="submit" value="Change password"/>
+                <input class="button" type="submit" value="Update Profile"/>
             </div>
         </form>
         <p class="abouth">Delete account:</p>
