--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@ $else:
                 <li><a href="/logoff">Logoff</a></li>
                 <li><a href="/manage_account">Manage account</a></li>
                 <li><a href="/history">History</a></li>
-            <li><a href="http://datalove.me/give/widget.html">Widget for website</a></li>
+            <li><a href="http://give.datalove.me/widget">Widget for website</a></li>
             <li><a href="http://datalove.me/give/about.html">About give.datalove.me</a>
             $if session_id:
                 <li><a href="/users?sid=$session_id">Loverz</a></li>
